--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/node": "^9.4.3",
     "@astrojs/react": "^4.3.1",
     "@astrojs/sitemap": "^3.5.1",
+    "@astrojs/vercel": "^8.2.11",
     "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/vite": "^4.1.13",
     "@types/react": "^19.1.12",
