--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-slot": "^1.1.2",
+    "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.76.1",
     "@tailwindcss/vite": "^4.1.13",
     "@types/react": "^19.1.12",
@@ -30,6 +31,7 @@
     "rc-slider": "^11.1.9",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-google-recaptcha-v3": "^1.11.0",
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.1.13",
     "tw-animate-css": "^1.2.5",
