--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 SUPABASE_URL=###
 SUPABASE_KEY=###
 OPENROUTER_API_KEY=###
+OPENROUTER_MODEL=###
+MOCK_AI_SERVICE=###
+RECAPTCHA_SITE_KEY=###
+RECAPTCHA_SECRET_KEY=###
