--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,5 @@ SUPABASE_KEY=###
 OPENROUTER_API_KEY=###
 OPENROUTER_MODEL=###
 MOCK_AI_SERVICE=###
-RECAPTCHA_SITE_KEY=###
+PUBLIC_RECAPTCHA_SITE_KEY=###
 RECAPTCHA_SECRET_KEY=###
