Pull Request Checks

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,9 @@ OPENROUTER_MODEL=###
 MOCK_AI_SERVICE=###
 PUBLIC_RECAPTCHA_SITE_KEY=###
 RECAPTCHA_SECRET_KEY=###
+E2E_USER_EMAIL=###
+E2E_USER_PASSWORD=###
+E2E_USER2_EMAIL=###
+E2E_USER2_PASSWORD=###
+E2E_ADMIN_EMAIL=###
+E2E_ADMIN_PASSWORD=###
