--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.76.1",
     "@tailwindcss/vite": "^4.1.13",
+    "@types/loglevel": "^1.5.4",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
     "astro": "^5.13.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "loglevel": "^1.9.2",
     "lucide-react": "^0.487.0",
     "rc-slider": "^11.1.9",
     "react": "^19.1.1",
