--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -86,16 +86,16 @@ jobs:
       - name: Install Playwright browsers
         run: npx playwright install --with-deps chromium
 
-      - name: Run e2e tests with coverage
-        run: npx playwright test --coverage --reporter=line
+      - name: Run e2e tests
+        run: npx playwright test --reporter=line
 
-      - name: Upload e2e coverage
-        if: success()
+      - name: Upload e2e test report
+        if: always()
         uses: actions/upload-artifact@v5
         with:
-          name: e2e-coverage
-          path: playwright-report/coverage
-          if-no-files-found: error
+          name: e2e-test-report
+          path: playwright-report
+          if-no-files-found: ignore
 
   status-comment:
     needs:
@@ -116,7 +116,7 @@ jobs:
               "",
               "- lint",
               "- unit-tests (coverage uploaded)",
-              "- e2e-tests (coverage uploaded)"
+              "- e2e-tests (test report uploaded)"
             ].join("\n");
 
             await github.rest.issues.createComment({
